# Timescape-Viewer

./: Cargo.toml  README.md  build.rs  dist-workspace.toml
assets/fonts/: FiraSansCondensed-Regular-Expanded.sfd
assets/i18n/: app.yaml  de.yaml  en.yaml
src/: logging.rs  main.rs
src/commands/: choose_file.rs  mod.rs
src/constants/: icons.rs  layout.rs
src/messages/: mod.rs
src/origins/: mod.rs
src/state/: line_chart.rs  mod.rs  overview.mmd  signal.rs  spectrogram.rs  trail_chart.rs
src/views/: backstage.rs  mod.rs  timescape.rs
wix/: banner.xcf  dialog.xcf  main.wxs
