[package]
name = "timescape-viewer"
version = "0.1.0"
authors = ["Jannik Peters <19486794+JannikP@users.noreply.github.com>"]
edition = "2024"
rust-version = "1.85"
description = "A desktop application of viewing and converting timeseries data from all kind of sources."
readme = "README.md"
homepage = "https://timescape-viewer.org"
repository = "https://github.com/JannikP/Timescape-Viewer"
license = "GPL-3.0"
publish = false # Do not publish to crates.io

[package.metadata.dist]
dist = true # But publish to Github releases

[package.metadata.i18n]
available-locales = ["en", "de"]
default-locale = "en"
# Path for your translations YAML file
# This config for let `cargo i18n` command line tool know where to find the translations.
load-path = "assets/i18n"

[package.metadata.winres]
FileDescription = "A desktop application of viewing and converting timeseries data from all kind of sources."
ProductName = "Timescape-Viewer"
OriginalFilename = "timescape-viewer.exe"
LegalCopyright = "Copyright © 2025 Jannik Peters"

[package.metadata.wix]
upgrade-guid = "C4D985AF-84EB-40B6-82F5-CB3D80AB1F69"
path-guid = "63A8C0C7-AE8A-4473-8D6C-5B18C3F23DE2"
license = "LICENSE"
eula = false
dialog = "wix/dialog.bmp"
banner = "wix/banner.bmp"
product-icon = "assets/app_icon.ico"

[dependencies]
# Logger implementation
flexi_logger = "0.30"

# Data structure to hold the grid of plots
grid = "0.17.0"

# GUI framework
iced = { git = "https://github.com/iced-rs/iced", default-features = false, features = ["wgpu", "debug", "system", "auto-detect-theme", "thread-pool"] }

# Logging infrastructure
log = "0.4"

# Display file choosers and message boxes.
native-dialog = { version = "0.9.0", features = ["async"] }

# Internationalization support
rust-i18n = "3.1.5"

# Embed mermaid diagrams in RustDoc.
simple-mermaid = "0.2.0"

[target.'cfg(windows)'.build-dependencies]
# Adding meta information and icons to windows executable.
winres = "0.1"

[dev-dependencies]
#  Tests the application in headless mode.
iced_test = { git = "https://github.com/iced-rs/iced" }

[profile.release]
opt-level = 3
debug = false
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "unwind"
incremental = false
codegen-units = 16
rpath = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
